Fix alignment issue in Firefox

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,6 +19,10 @@ a, a:visited {
   color: inherit;
 }
 
+div.awesomplete {
+  vertical-align: top;
+}
+
 .fr {
   float: right;
 }
